# algos-and-stuff

./: .gitignore  readme.md
code/tree_package/: pyproject.toml  readme.md  setup.py
code/tree_package/tree/: node.py  tree.py  turns.py  util.py
nb/: brackets.ipynb  contest.ipynb  trees.ipynb
